src/tests/decl3.err
Microsoft (R) 32-bit C/C++ Optimizing Compiler Version 12.00.8804 for 80x86
Copyright (C) Microsoft Corp 1984-1998. All rights reserved.

decl3.c
decl3.c(3) : error: 's1': struct is already defined
decl3.c(5) : error: 's1': invalid redeclaration of struct
decl3.c(15) : error: 's1': invalid redeclaration of struct
decl3.c(15) : error: '<unnamed>': uses incomplete type
decl3.c(15) : warning: Declaration does not declare anything
decl3.c(23) : error: 's1': struct is already defined
decl3.c(29) : error: 'signed'/'unsigned' only apply to 'int' and 'char'
decl3.c(30) : error: 'long' only applies to 'int' and 'double'
decl3.c(31) : error: More than one type in declaration
decl3.c(39) : error: 'm1': bitfield requires integer type
decl3.c(41) : error: bitfield: constant integer expression required
decl3.c(43) : error: 'm5': too large bitfield width
decl3.c(47) : error: 'm10': zero-width bitfield must be unnamed
decl3.c(63) : error: 'a': uses incomplete type
